# kern-IDE

./: .gitignore  LICENSE
desktop-tk/: README.md  main.py  requirements.txt
desktop-tk/app/: __init__.py  editor.py  filesystem.py  ide.py  runner.py  state.py  theme.py  version.py
desktop-tk/models/: __init__.py  events.py
desktop-tk/packaging/: build_release.ps1  kern-ide.spec  shareable-ide.spec  spl-ide.spec
desktop-tk/packaging/work_test/kern-ide/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  xref-kern-ide.html
desktop-tk/services/: __init__.py  diagnostics.py  errors.py  module_resolution.py  process_runner.py  repl_session.py  stdlib_exports.py  suggestions.py
desktop-tk/ui/: __init__.py  command_palette.py  layout.py  theme.py  tooltip.py
desktop-tk/vscode-extension/: package-lock.json  package.json
native-qt/: CMakeLists.txt
native-qt/include/: MainWindow.hpp  SplHighlighter.hpp
native-qt/src/: MainWindow.cpp  SplHighlighter.cpp  main.cpp
vscode-extension/: extension.js  kern-language-tools-0.1.0.vsix  package.json
